[project]
name = "MMFirstFilterPy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nikolai Ponomarev", email = "wowasterdev@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black>=24.4.2",
]
